[package]
name = "test_lrt"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "test_lrt"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "0.30.1", features = ["init-if-needed"]}
solana-program = "2.0.1"
mpl-token-metadata = "4.1.2"
spl-token = "6.0.0"
anchor-spl = {version = "0.30.1", features = ["metadata"]}
